[Omnibox] Remove extra padding on left in suggestions

This CL removes an extra application of GetBorderThicknessDip(). It was
being added in GetIconAlignmentOffset() and again outside of that call.
Also cleans up a todo for the same topic.

Bug: 839120
Change-Id: I7687903a879dd0f2e29dc7b9090052dc7ff57442
Reviewed-on: https://chromium-review.googlesource.com/1041208
Commit-Queue: Dave Schuyler <dschuyler@chromium.org>
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555890}
Former-commit-id: 678180e9e5aad1117b70a8e04db2dbc7ffac0f35